--- a/leo_bringup/package.xml
+++ b/leo_bringup/package.xml
@@ -6,9 +6,14 @@
     This package provides LeoRover capability.
   </description>
 
-  <maintainer email="support@fictionlab.pl">fictionlab</maintainer>
+  <maintainer email="blazej@turtlerover.com">Błażej Sowa</maintainer>
+  <author email="blazej@turtlerover.com">Błażej Sowa</author>
 
   <license>MIT</license>
+
+  <url type="website">http://wiki.ros.org/leo_bringup</url>
+  <url type="bugtracker">https://github.com/LeoRover/leo_robot/issues</url>
+  <url type="repository">https://github.com/LeoRover/leo_robot</url>
 
   <buildtool_depend>catkin</buildtool_depend>
   <exec_depend>web_video_server</exec_depend>
