--- a/leo_fw/package.xml
+++ b/leo_fw/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>leo_firmware</name>
+  <name>leo_fw</name>
   <version>0.0.0</version>
   <description>Firmware binary releases for Leo Rover</description>
 
@@ -9,7 +9,7 @@
 
   <license>MIT</license>
 
-  <url type="website">http://wiki.ros.org/leo_firmware</url>
+  <url type="website">http://wiki.ros.org/leo_fw</url>
   <url type="bugtracker">https://github.com/LeoRover/leo_robot/issues</url>
   <url type="repository">https://github.com/LeoRover/leo_robot</url>
 
