leo_fw: initial update script

--- a/leo_fw/CMakeLists.txt
+++ b/leo_fw/CMakeLists.txt
@@ -4,3 +4,10 @@ project(leo_fw)
 find_package(catkin REQUIRED)
 
 catkin_package()
+
+catkin_python_setup()
+
+install(
+    DIRECTORY firmware/
+    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/firmware
+)
