leo_robot: update dependencies

--- a/leo_robot/package.xml
+++ b/leo_robot/package.xml
@@ -16,6 +16,9 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <exec_depend>leo_bringup</exec_depend>
+  <exec_depend>leo_fw</exec_depend>
+
+  <exec_depend>leo</exec_depend>  
 
   <export>
     <metapackage />
