--- a/leo_bringup/CMakeLists.txt
+++ b/leo_bringup/CMakeLists.txt
@@ -5,15 +5,22 @@ find_package(catkin)
 
 catkin_package()
 
-install(DIRECTORY launch/
-    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch)
+install(
+    DIRECTORY launch/
+    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
+)
 
-install(DIRECTORY camera_info/
-    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/camera_info)
+install(
+    DIRECTORY camera_info/
+    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/camera_info
+)
 
-install(DIRECTORY config/
-    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/config)
+install(
+    DIRECTORY config/
+    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/config
+)
 
-catkin_install_python(PROGRAMS
-    scripts/leo_system
-    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+catkin_install_python(
+    PROGRAMS scripts/leo_system
+    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
