Increase cmake minimum version

--- a/leo_bringup/CMakeLists.txt
+++ b/leo_bringup/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.0.2)
 project(leo_bringup)
 
 find_package(catkin)
@@ -6,21 +6,14 @@ find_package(catkin)
 catkin_package()
 
 install(
-    DIRECTORY launch/
-    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
-)
-
-install(
-    DIRECTORY camera_info/
-    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/camera_info
-)
-
-install(
-    DIRECTORY config/
-    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/config
+  DIRECTORY
+    camera_info
+    config
+    launch
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
 catkin_install_python(
-    PROGRAMS scripts/leo_system
-    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+  PROGRAMS scripts/leo_system
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
