--- a/leo_fw/package.xml
+++ b/leo_fw/package.xml
@@ -19,9 +19,11 @@
 
   <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-whichcraft</exec_depend>
   <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-whichcraft</exec_depend>
+
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
   
   <exec_depend>rospy</exec_depend>
-  <exec_depend>rospkg</exec_depend>
   <exec_depend>rosgraph</exec_depend>
   <exec_depend>rosnode</exec_depend>
   <exec_depend>rosservice</exec_depend>
