--- a/leo_fw/package.xml
+++ b/leo_fw/package.xml
@@ -16,6 +16,8 @@
   <url type="repository">https://github.com/LeoRover/leo_robot</url>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
+  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
 
   <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-whichcraft</exec_depend>
   <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-whichcraft</exec_depend>
