--- a/leo_bringup/package.xml
+++ b/leo_bringup/package.xml
@@ -6,8 +6,8 @@
     Scripts and launch files for starting basic Leo Rover functionalities. 
   </description>
 
-  <maintainer email="blazej@turtlerover.com">Błażej Sowa</maintainer>
-  <author email="blazej@turtlerover.com">Błażej Sowa</author>
+  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
+  <author email="blazej@fictionlab.pl">Błażej Sowa</author>
 
   <license>MIT</license>
 
