--- a/leo_fw/package.xml
+++ b/leo_fw/package.xml
@@ -6,8 +6,8 @@
     Firmware binary releases and update script for Leo Rover
   </description>
 
-  <maintainer email="blazej@turtlerover.com">Błażej Sowa</maintainer>
-  <author email="blazej@turtlerover.com">Błażej Sowa</author>
+  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
+  <author email="blazej@fictionlab.pl">Błażej Sowa</author>
 
   <license>MIT</license>
 
