--- a/leo_robot/package.xml
+++ b/leo_robot/package.xml
@@ -4,8 +4,8 @@
   <version>1.1.3</version>
   <description>Metapackage of software to install on Leo Rover.</description>
 
-  <maintainer email="blazej@turtlerover.com">Błażej Sowa</maintainer>
-  <author email="blazej@turtlerover.com">Błażej Sowa</author>
+  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
+  <author email="blazej@fictionlab.pl">Błażej Sowa</author>
 
   <license>MIT</license>
 
