--- a/leo_fw/package.xml
+++ b/leo_fw/package.xml
@@ -32,5 +32,11 @@
 
   <exec_depend>std_srvs</exec_depend>
   <exec_depend>rosmon_msgs</exec_depend>
+
+  <depend>roscpp</depend>
+  <depend>sensor_msgs</depend>
+  <depend>nav_msgs</depend>
+
+  <depend>leo_msgs</depend>
   
 </package>
