Fix package.xml syntax

--- a/leo_bringup/package.xml
+++ b/leo_bringup/package.xml
@@ -25,7 +25,7 @@
   <exec_depend>xacro</exec_depend>
 
   <exec_depend>leo_description</exec_depend>
-  <exec_depend>leo_fw<exec_depend>
+  <exec_depend>leo_fw</exec_depend>
 
   <!-- <exec_depend>raspicam_node</exec_depend> -->
 
