--- a/leo_fw/package.xml
+++ b/leo_fw/package.xml
@@ -16,14 +16,10 @@
   <url type="repository">https://github.com/LeoRover/leo_robot</url>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
-  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
+  <buildtool_depend>python3-setuptools</buildtool_depend>
 
-  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-whichcraft</exec_depend>
-  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-whichcraft</exec_depend>
-
-  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
-  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
+  <exec_depend>python3-whichcraft</exec_depend>
+  <exec_depend>python3-rospkg</exec_depend>
   
   <exec_depend>rospy</exec_depend>
   <exec_depend>rosgraph</exec_depend>
