Set battery_min_voltage parameter

--- a/leo_bringup/config/firmware.yaml
+++ b/leo_bringup/config/firmware.yaml
@@ -4,6 +4,7 @@ leo_hat:
         wheel_separation: 0.33
         angular_velocity_multiplier: 1.91
         input_timeout: 500
+    battery_min_voltage: 10.0
 
 core2:
     robot_frame_id: "base_link"
