Fix some problems reported by catkin_lint

--- a/leo_bringup/package.xml
+++ b/leo_bringup/package.xml
@@ -23,6 +23,7 @@
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>xacro</exec_depend>
+  <exec_depend>rosapi</exec_depend>
 
   <exec_depend>leo_description</exec_depend>
   <exec_depend>leo_fw</exec_depend>
