--- a/.github/workflows/ci-noetic.yml
+++ b/.github/workflows/ci-noetic.yml
@@ -16,7 +16,9 @@ jobs:
       matrix:
         ROS_DISTRO: [noetic]
         ROS_REPO: [testing, main]
-    env: ${{ matrix.env }}
+    env: 
+      ROS_DISTRO: ${{ matrix.ROS_DISTRO }}
+      ROS_REPO: ${{ matrix.ROS_REPO }}
     steps:
       - name: Checkout repo
         uses: actions/checkout@v1
