Change yaml struct

--- a/leo_fw/test_data/encoder_load.yaml
+++ b/leo_fw/test_data/encoder_load.yaml
@@ -1,12 +1,10 @@
-test1:
-  velocity: 2.0
+tests:
+- velocity: 2.0
   time: 1
-  offset: 0.2
-test2:
-  velocity: -2.0
+  offset: 0.3
+- velocity: -2.0
   time: 2
-  offset: 0.2
-test3:
-  velocity: 1.0
+  offset: 0.3
+- velocity: 1.0
   time: 2
-  offset: 0.2
+  offset: 0.3
