--- a/leo_fw/test_data/encoder.yaml
+++ b/leo_fw/test_data/encoder.yaml
@@ -1,19 +1,16 @@
-test1:
-  velocity: 1.0
+tests:
+- velocity: 1.0
   time: 2
-  offset: 0.2
-test2:
-  velocity: 2.0
+  offset: 0.3
+- velocity: 2.0
   time: 2
-  offset: 0.2
-test3:
-  velocity: 3.0
+  offset: 0.3
+- velocity: 3.0
   time: 2
-  offset: 0.2
-test4:
-  velocity: 4.0
+  offset: 0.3
+- velocity: 4.0
   time: 3
-  offset: 0.2
+  offset: 0.3
 
 
 
