--- a/leo_fw/test_data/torque.yaml
+++ b/leo_fw/test_data/torque.yaml
@@ -1,24 +1,19 @@
-test1:
-  pwm: 10
+tests:
+- pwm: 10
   torque: 0.01
   time: 1
-test2:
-  pwm: 20
-  torque: 0.03
+- pwm: 20
+  torque: 0.02
   time: 1
-test3:
-  pwm: 30 
-  torque: 0.04
+- pwm: 30 
+  torque: 0.02
   time: 1
-test4:
-  pwm: 40
-  torque: 0.06
+- pwm: 40
+  torque: 0.02
   time: 1
-test5:
-  pwm: 50
-  torque: 0.08
+- pwm: 50
+  torque: 0.02
   time: 1
-test6:
-  pwm: 60 
-  torque: 0.1
+- pwm: 60 
+  torque: 0.02
   time: 1
