--- a/leo_fw/test_data/torque_load.yaml
+++ b/leo_fw/test_data/torque_load.yaml
@@ -1,16 +1,13 @@
-test1:
-  pwm: 10
+tests:
+- pwm: 10
   torque: 0.02
   time: 2
-test2:
-  pwm: 20
+- pwm: 20
   torque: 0.1
   time: 2
-test3:
-  pwm: 30 
+- pwm: 30 
   torque: 0.2
   time: 2
-test3:
-  pwm: 40 
+- pwm: 40 
   torque: 0.3
   time: 2
