--- a/.github/workflows/ci-noetic.yml
+++ b/.github/workflows/ci-noetic.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   clang-format-check:
-    name: Formatting Check
+    name: Clang-format formatting check
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -21,6 +21,7 @@ jobs:
         clang-format-version: '10'
   
   black-check:
+    name: Black formatting check
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
