--- a/leo_fw/package.xml
+++ b/leo_fw/package.xml
@@ -26,13 +26,13 @@
   <exec_depend>rosnode</exec_depend>
   <exec_depend>rosservice</exec_depend>
 
-  <exec_depend>std_srvs</exec_depend>
   <exec_depend>rosmon_msgs</exec_depend>
   
   <exec_depend>python3-numpy</exec_depend>
 
   <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
+  <depend>std_srvs</depend>
   <depend>nav_msgs</depend>
   <depend>yaml-cpp</depend>
 
